--- a/project/web/html/activityList.html
+++ b/project/web/html/activityList.html
@@ -18,18 +18,18 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header">
-                                <strong class="card-title">Data Table</strong>
+                                <strong class="card-title">活动列表</strong>
                             </div>
                             <div class="card-body">
                                 <table id="bootstrap-data-table" class="table table-striped table-bordered table-hover">
                                     <thead>
                                         <tr>
-                                            <th>ID</th>
-                                            <th>Name</th>
-                                            <th>Abbr</th>
-                                            <th>Begin</th>
-											<th>End</th>
-                                            <th>Operation</th>
+                                            <th>活动ID</th>
+                                            <th>活动名称</th>
+                                            <th>活动简称</th>
+                                            <th>开始时间</th>
+											<th>结束时间</th>
+                                            <th>操作</th>
                                         </tr>
                                     </thead>
                                     {%strip%}
