--- a/project/web/html/attendentManager.html
+++ b/project/web/html/attendentManager.html
@@ -22,7 +22,7 @@
   
       <div class="container-fluid">
         <div class="row">
-           <div style="position: absolute; margin-top:0px;">
+           <div style="position: absolute; margin-top:50px;">
           <div class="col-md-3 sidebar">
             <ul class="nav nav-sidebar" style="line-height:60px">
              <li class=""><a href="javascript:info_manage({%$activity.id%})">信息修改</a></li>
@@ -48,11 +48,11 @@
                                 <table id="bootstrap-data-table" class="table table-striped table-bordered table-hover">
                                     <thead>
                                         <tr>
-                                            <th>ID</th>
-                                            <th>Username</th>
-                                            <th>Email</th>
-                                            <th>Role</th>
-                                            <th>Operation</th>
+                                            <th>用户ID</th>
+                                            <th>用户名</th>
+                                            <th>邮箱</th>
+                                            <th>状态</th>
+                                            <th>操作</th>
                                         </tr>
                                     </thead>
                                     {%strip%}
