--- a/project/web/html/infoManager.html
+++ b/project/web/html/infoManager.html
@@ -1,11 +1,10 @@
 {%extends file="./tpl/layout.html"%} 
 {%block name="css" append%}
     <link href="/css/eventmin.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/html/assets/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" media="all">
     
     <link href="/css/login.css" rel="stylesheet" type="text/css" media="all">
     <link href="/css/link.css" rel="stylesheet" type="text/css" media="all">
-
-    <link href="/html/assets/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" media="all">
 
 	  <link rel="stylesheet" href="/html/assets/css/bootstrap.min.css" type="text/css" media="all">
     <link rel="stylesheet" href="/html/assets/css/lib/datatable/dataTables.bootstrap.min.css" type="text/css" media="all">
@@ -21,7 +20,7 @@
 <body>
       <div class="container-fluid">
         <div class="row">
-          <div style="position: absolute; margin-top:0px;">
+          <div style="position: absolute; margin-top:50px;">
             <div class="col-md-3 sidebar">
               <ul class="nav nav-sidebar" style="line-height:60px">
                 <li class="active"><a href="">信息修改</a></li>
@@ -32,6 +31,57 @@
               </ul>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="mid-class">
+        <div style="position: absolute; margin-left:100px;width:1100px;">
+           <div class="art-right-w3ls">
+              <form action="php/activities/changeActivityInfo.php" method="post" name="registerForm">
+                 <div class="main">
+                    <div class="form-left-to-w3l">
+                       <input type="text" id="name" name="name" placeholder="会议名称" autocomplete="off"required="">
+                    </div>
+                    <div class="form-left-to-w3l ">
+                        <input type="text" id="abbr" name="abbr" placeholder="会议简称" autocomplete="off" required=""> 
+                        <div class="clear"></div>   
+                    </div>
+                    <div class="form-group">
+                      <div class="form-left-to-w3l ">
+                          <input type="text" id="begin_date" name="begin_date" class="form-control" placeholder="开始时间" autocomplete="off" required="">  
+                          <div class="clear"></div>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="form-left-to-w3l ">
+                          <input type="text" id="end_date" name="end_date" class="form-control" placeholder="结束时间" autocomplete="off" required="">  
+                          <div class="clear"></div>
+                      </div>
+                    </div>
+                    <div class="form-left-to-w3l ">
+                        <input type="text" id="description" name="abbr" placeholder="会议介绍" autocomplete="off" required=""> 
+                        <div class="clear"></div>   
+                    </div>
+                    <div class="form-left-to-w3l ">
+                        <input type="text" id="description" name="website_address" placeholder="会议网址" autocomplete="off" required=""> 
+                        <div class="clear"></div>   
+                    </div>
+                   </div>
+                 <div class="clear"></div>
+                 <div class="btnn">
+                  <div style="position: absolute; margin-left:550px;">
+                    <button type="submit" onclick="return checkActivity();">修改活动信息</button>
+                  </div>
+                 </div>
+              </form>
+              <div class="w3layouts_more-buttn">
+                <div style="position: absolute;margin-top:-20px;margin-left:590px;">
+                 <h3>
+                    <a href="/php/infoManager.php">重置信息
+                    </a>
+                 </h3>
+                </div>
+              </div>
+           </div>
         </div>
       </div>
 </body>
