--- a/project/web/html/manageActivity.html
+++ b/project/web/html/manageActivity.html
@@ -19,7 +19,7 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header">
-                                <strong class="card-title">Data Table</strong>
+                                <strong class="card-title">活动管理</strong>
                                 {%if $role === 1%}
                                     <span style="font-family:'Times New Roman';">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</span>
                                     <a href="/php/manageActivityManager.php">管理员入口</a>
@@ -29,12 +29,12 @@
                                 <table id="bootstrap-data-table" class="table table-striped table-bordered table-hover">
                                     <thead>
                                         <tr>
-                                            <th>ID</th>
-                                            <th>Name</th>
-                                            <th>Abbr</th>
-                                            <th>Begin</th>
-											<th>End</th>
-                                            <th>Operation</th>
+                                            <th>活动ID</th>
+                                            <th>活动名称</th>
+                                            <th>活动简称</th>
+                                            <th>开始时间</th>
+											<th>结束时间</th>
+                                            <th>操作</th>
                                         </tr>
                                     </thead>
                                     {%strip%}
